--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: e_wallet
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment:
-  sdk: ">=2.16.0-85.0.dev <3.0.0"
+environment: 
+  sdk: '>=2.16.0-85.0.dev <3.0.0'
 
-dependencies:
+dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.1
   sqflite: 2.0.1
@@ -16,14 +16,19 @@ dependencies:
   month_picker_dialog: 0.4.0
   flex_color_picker: 2.2.0
   path_provider: 2.0.8
-  flutter:
+  package_info_plus: 1.3.0
+  image_picker: 0.8.4+4
+  flutter: 
     sdk: flutter
 
-dev_dependencies:
+dev_dependencies: 
   flutter_lints: ^1.0.0
   lints: 1.0.1
-  flutter_test:
+  flutter_test: 
     sdk: flutter
 
-flutter:
+flutter: 
+  assets: 
+    - assets/images/
   uses-material-design: true
+
