--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: e_wallet
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.16.0-85.0.dev <3.0.0'
+environment:
+  sdk: ">=2.16.0-85.0.dev <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.1
   sqflite: 2.0.1
@@ -17,18 +17,34 @@ dependencies:
   flex_color_picker: 2.2.0
   path_provider: 2.0.8
   package_info_plus: 1.3.0
+  flutter_app_name: 0.1.1
+  flutter_native_splash: 1.3.2
   image_picker: 0.8.4+4
-  flutter: 
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^1.0.0
   lints: 1.0.1
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
-  assets: 
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/icon.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/splashscreen.png
+  android_gravity: center
+
+flutter_app_name:
+  name: E-Wallet
+
+flutter:
+  assets:
     - assets/images/
   uses-material-design: true
-
