--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: "2.16.0-80.1.beta"
+  sdk: "2.15.1"
 
 dependencies:
   cupertino_icons: ^1.0.2
