--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: e_wallet
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment:
-  sdk: "2.15.1"
+environment: 
+  sdk: 2.15.1
 
-dependencies:
+dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.1
   sqflite: 2.0.1
@@ -20,31 +20,34 @@ dependencies:
   flutter_app_name: 0.1.1
   flutter_native_splash: 1.3.2
   image_picker: 0.8.4+4
-  flutter:
+  local_auth: 1.1.9
+  google_mobile_ads: 1.0.1
+  flutter: 
     sdk: flutter
 
-dev_dependencies:
+dev_dependencies: 
   flutter_lints: ^1.0.0
   lints: 1.0.1
-  flutter_test:
+  flutter_launcher_icons: ^0.9.2
+  flutter_test: 
     sdk: flutter
 
-  flutter_launcher_icons: ^0.9.2
-flutter_icons:
-  android: "launcher_icon"
+flutter_icons: 
+  android: launcher_icon
+  image_path: assets/images/icon.png
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/icon.png"
 
-flutter_native_splash:
-  color: "#ffffff"
+flutter_native_splash: 
+  color: '#ffffff'
   image: assets/images/splashscreen.png
   android_gravity: center
 
-flutter_app_name:
+flutter_app_name: 
   name: E-Wallet
 
-flutter:
-  assets:
+flutter: 
+  assets: 
     - assets/images/
   uses-material-design: true
+
