--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   image_picker: 0.8.4+4
   local_auth: 1.1.9
   google_mobile_ads: 1.0.1
+  flutter_windowmanager: 0.2.0
+  flutter_switch: 0.3.2
   flutter: 
     sdk: flutter
 
