--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_windowmanager: 0.2.0
   flutter_switch: 0.3.2
   native_admob_flutter: 1.5.0
+  expansion_tile_card: 2.0.0
   flutter: 
     sdk: flutter
 
